YAMLS/api_deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: virenmistrys/vm-react-api
        name: api
        ports:
        - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    nodePort: 30020
  selector:
    app: api
  type: NodePort
status:
  loadBalancer: {}
