YAMLS/mongodb_deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - args:
        - mongod
        - --noauth
        - --smallfiles
        image: mongo
        name: mongodb
        ports:
        - containerPort: 27017
        resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
  - name: "27017"
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
status:
  loadBalancer: {}
